--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a visualization tool of music",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel ./index.html"
+    "dev": "parcel ./index.html",
+    "build": "parcel build ./index.html"
   },
   "keywords": [],
   "prettier": {
